# icons/remmina - The GTK+ Remote Desktop Client
#
# Copyright (C) 2011 Marc-Andre Moreau
# Copyright (C) 2016-2018 Antenore Gatta, Giovanni Panozzo
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 51 Franklin Street, Fifth Floor,
# Boston, MA  02110-1301, USA.
#
# In addition, as a special exception, the copyright holders give
# permission to link the code of portions of this program with the
# OpenSSL library under certain conditions as described in each
# individual source file, and distribute linked combinations
# including the two.
# You must obey the GNU General Public License in all respects
# for all of the code used other than OpenSSL. If you modify
# file(s) with this exception, you may extend this exception to your
# version of the file(s), but you are not obligated to do so. If you
# do not wish to do so, delete this exception statement from your
# version. If you delete this exception statement from all source
# files in the program, then also delete it here.


set(APPICON16_ACTIONS_DIR "${REMMINA_DATADIR}/icons/hicolor/16x16/actions")
set(APPICON22_ACTIONS_DIR "${REMMINA_DATADIR}/icons/hicolor/22x22/actions")
set(APPICON24_ACTIONS_DIR "${REMMINA_DATADIR}/icons/hicolor/24x24/actions")
set(APPICON32_ACTIONS_DIR "${REMMINA_DATADIR}/icons/hicolor/32x32/actions")
set(APPICON48_ACTIONS_DIR "${REMMINA_DATADIR}/icons/hicolor/48x48/actions")
set(APPICON16_EMBLEMS_DIR "${REMMINA_DATADIR}/icons/hicolor/16x16/emblems")
set(APPICON22_EMBLEMS_DIR "${REMMINA_DATADIR}/icons/hicolor/22x22/emblems")
set(APPICON24_EMBLEMS_DIR "${REMMINA_DATADIR}/icons/hicolor/24x24/emblems")
set(APPICON32_EMBLEMS_DIR "${REMMINA_DATADIR}/icons/hicolor/32x32/emblems")
set(APPICON48_EMBLEMS_DIR "${REMMINA_DATADIR}/icons/hicolor/48x48/emblems")

set(APPICON16_ACTIONS_DATA
    16x16/actions/remmina-camera-photo.png
    16x16/actions/remmina-connect.png
    16x16/actions/remmina-disconnect.png
    16x16/actions/remmina-document-save.png
    16x16/actions/remmina-document-send.png
    16x16/actions/remmina-dynres.png
    16x16/actions/remmina-fit-window.png
    16x16/actions/remmina-fullscreen.png
    16x16/actions/remmina-go-bottom.png
    16x16/actions/remmina-keyboard.png
    16x16/actions/remmina-pan-down-symbolic.png
    16x16/actions/remmina-pan-up-symbolic.png
    16x16/actions/remmina-pin-down.png
    16x16/actions/remmina-pin-up.png
    16x16/actions/remmina-preferences-system.png
    16x16/actions/remmina-scale.png
    16x16/actions/remmina-switch-page.png
    16x16/actions/remmina-system-run.png
    )

set(APPICON22_ACTIONS_DATA
    22x22/actions/remmina-camera-photo.png
    22x22/actions/remmina-connect.png
    22x22/actions/remmina-disconnect.png
    22x22/actions/remmina-document-save.png
    22x22/actions/remmina-document-send.png
    22x22/actions/remmina-dynres.png
    22x22/actions/remmina-fit-window.png
    22x22/actions/remmina-fullscreen.png
    22x22/actions/remmina-go-bottom.png
    22x22/actions/remmina-keyboard.png
    22x22/actions/remmina-pan-down-symbolic.png
    22x22/actions/remmina-pan-up-symbolic.png
    22x22/actions/remmina-pin-down.png
    22x22/actions/remmina-pin-up.png
    22x22/actions/remmina-preferences-system.png
    22x22/actions/remmina-scale.png
    22x22/actions/remmina-switch-page.png
    22x22/actions/remmina-system-run.png
    )

set(APPICON24_ACTIONS_DATA
    24x24/actions/remmina-camera-photo.png
    24x24/actions/remmina-connect.png
    24x24/actions/remmina-disconnect.png
    24x24/actions/remmina-document-save.png
    24x24/actions/remmina-document-send.png
    24x24/actions/remmina-dynres.png
    24x24/actions/remmina-fit-window.png
    24x24/actions/remmina-fullscreen.png
    24x24/actions/remmina-go-bottom.png
    24x24/actions/remmina-keyboard.png
    24x24/actions/remmina-pan-down-symbolic.png
    24x24/actions/remmina-pan-up-symbolic.png
    24x24/actions/remmina-pin-down.png
    24x24/actions/remmina-pin-up.png
    24x24/actions/remmina-preferences-system.png
    24x24/actions/remmina-scale.png
    24x24/actions/remmina-switch-page.png
    24x24/actions/remmina-system-run.png
    )

set(APPICON32_ACTIONS_DATA
    32x32/actions/remmina-camera-photo.png
    32x32/actions/remmina-connect.png
    32x32/actions/remmina-disconnect.png
    32x32/actions/remmina-document-save.png
    32x32/actions/remmina-document-send.png
    32x32/actions/remmina-dynres.png
    32x32/actions/remmina-fit-window.png
    32x32/actions/remmina-fullscreen.png
    32x32/actions/remmina-go-bottom.png
    32x32/actions/remmina-keyboard.png
    32x32/actions/remmina-pan-down-symbolic.png
    32x32/actions/remmina-pan-up-symbolic.png
    32x32/actions/remmina-pin-down.png
    32x32/actions/remmina-pin-up.png
    32x32/actions/remmina-preferences-system.png
    32x32/actions/remmina-scale.png
    32x32/actions/remmina-switch-page.png
    32x32/actions/remmina-system-run.png
    )

set(APPICON48_ACTIONS_DATA
    48x48/actions/remmina-camera-photo.png
    48x48/actions/remmina-connect.png
    48x48/actions/remmina-disconnect.png
    48x48/actions/remmina-document-save.png
    48x48/actions/remmina-document-send.png
    48x48/actions/remmina-dynres.png
    48x48/actions/remmina-fit-window.png
    48x48/actions/remmina-fullscreen.png
    48x48/actions/remmina-go-bottom.png
    48x48/actions/remmina-keyboard.png
    48x48/actions/remmina-pan-down-symbolic.png
    48x48/actions/remmina-pan-up-symbolic.png
    48x48/actions/remmina-pin-down.png
    48x48/actions/remmina-pin-up.png
    48x48/actions/remmina-preferences-system.png
    48x48/actions/remmina-scale.png
    48x48/actions/remmina-switch-page.png
    48x48/actions/remmina-system-run.png
    )

set(APPICON16_EMBLEMS_DATA
    16x16/emblems/remmina-sftp.png
    16x16/emblems/remmina-ssh.png
    )

set(APPICON22_EMBLEMS_DATA
    22x22/emblems/remmina-sftp.png
    22x22/emblems/remmina-ssh.png
    )
set(APPICON24_EMBLEMS_DATA
    24x24/emblems/remmina-sftp.png
    24x24/emblems/remmina-ssh.png
    )
set(APPICON32_EMBLEMS_DATA
    32x32/emblems/remmina-sftp.png
    32x32/emblems/remmina-ssh.png
    )
set(APPICON48_EMBLEMS_DATA
    48x48/emblems/remmina-sftp.png
    48x48/emblems/remmina-ssh.png
    )

install(FILES ${APPICON16_ACTIONS_DATA} DESTINATION ${APPICON16_ACTIONS_DIR})
install(FILES ${APPICON22_ACTIONS_DATA} DESTINATION ${APPICON22_ACTIONS_DIR})
install(FILES ${APPICON24_ACTIONS_DATA} DESTINATION ${APPICON24_ACTIONS_DIR})
install(FILES ${APPICON32_ACTIONS_DATA} DESTINATION ${APPICON32_ACTIONS_DIR})
install(FILES ${APPICON48_ACTIONS_DATA} DESTINATION ${APPICON48_ACTIONS_DIR})
install(FILES ${APPICON16_EMBLEMS_DATA} DESTINATION ${APPICON16_EMBLEMS_DIR})
install(FILES ${APPICON22_EMBLEMS_DATA} DESTINATION ${APPICON22_EMBLEMS_DIR})
install(FILES ${APPICON24_EMBLEMS_DATA} DESTINATION ${APPICON24_EMBLEMS_DIR})
install(FILES ${APPICON32_EMBLEMS_DATA} DESTINATION ${APPICON32_EMBLEMS_DIR})
install(FILES ${APPICON48_EMBLEMS_DATA} DESTINATION ${APPICON48_EMBLEMS_DIR})

