# icons/remmina - The GTK+ Remote Desktop Client
#
# Copyright (C) 2011 Marc-Andre Moreau
# Copyright (C) 2016-2018 Antenore Gatta, Giovanni Panozzo
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 51 Franklin Street, Fifth Floor,
# Boston, MA  02110-1301, USA.
#
# In addition, as a special exception, the copyright holders give
# permission to link the code of portions of this program with the
# OpenSSL library under certain conditions as described in each
# individual source file, and distribute linked combinations
# including the two.
# You must obey the GNU General Public License in all respects
# for all of the code used other than OpenSSL. If you modify
# file(s) with this exception, you may extend this exception to your
# version of the file(s), but you are not obligated to do so. If you
# do not wish to do so, delete this exception statement from your
# version. If you delete this exception statement from all source
# files in the program, then also delete it here.


set(APPICON16_ACTIONS_DIR "${REMMINA_DATADIR}/icons/hicolor/16x16/actions")
set(APPICON22_ACTIONS_DIR "${REMMINA_DATADIR}/icons/hicolor/22x22/actions")
set(APPICON24_ACTIONS_DIR "${REMMINA_DATADIR}/icons/hicolor/24x24/actions")
set(APPICON32_ACTIONS_DIR "${REMMINA_DATADIR}/icons/hicolor/32x32/actions")
set(APPICON48_ACTIONS_DIR "${REMMINA_DATADIR}/icons/hicolor/48x48/actions")
set(APPICON16_EMBLEMS_DIR "${REMMINA_DATADIR}/icons/hicolor/16x16/emblems")
set(APPICON22_EMBLEMS_DIR "${REMMINA_DATADIR}/icons/hicolor/22x22/emblems")
set(APPICON24_EMBLEMS_DIR "${REMMINA_DATADIR}/icons/hicolor/24x24/emblems")
set(APPICON32_EMBLEMS_DIR "${REMMINA_DATADIR}/icons/hicolor/32x32/emblems")
set(APPICON48_EMBLEMS_DIR "${REMMINA_DATADIR}/icons/hicolor/48x48/emblems")

set(APPICON16_ACTIONS_DATA
    16x16/actions/remmina-camera-photo.svg
    16x16/actions/remmina-connect.svg
    16x16/actions/remmina-disconnect.svg
    16x16/actions/remmina-document-save.svg
    16x16/actions/remmina-document-send.svg
    16x16/actions/remmina-dynres.svg
    16x16/actions/remmina-fit-window.svg
    16x16/actions/remmina-folder-symbolic.svg
    16x16/actions/remmina-fullscreen.svg
    16x16/actions/remmina-go-bottom.svg
    16x16/actions/remmina-keyboard.svg
    16x16/actions/remmina-pan-down-symbolic.svg
    16x16/actions/remmina-pan-up-symbolic.svg
    16x16/actions/remmina-pin-down.svg
    16x16/actions/remmina-pin-up.svg
    16x16/actions/remmina-preferences-system.svg
    16x16/actions/remmina-scale.svg
    16x16/actions/remmina-switch-page.svg
    16x16/actions/remmina-system-run.svg
    )

set(APPICON22_ACTIONS_DATA
    22x22/actions/remmina-camera-photo.svg
    22x22/actions/remmina-connect.svg
    22x22/actions/remmina-disconnect.svg
    22x22/actions/remmina-document-save.svg
    22x22/actions/remmina-document-send.svg
    22x22/actions/remmina-dynres.svg
    22x22/actions/remmina-fit-window.svg
    22x22/actions/remmina-folder-symbolic.svg
    22x22/actions/remmina-fullscreen.svg
    22x22/actions/remmina-go-bottom.svg
    22x22/actions/remmina-keyboard.svg
    22x22/actions/remmina-pan-down-symbolic.svg
    22x22/actions/remmina-pan-up-symbolic.svg
    22x22/actions/remmina-pin-down.svg
    22x22/actions/remmina-pin-up.svg
    22x22/actions/remmina-preferences-system.svg
    22x22/actions/remmina-scale.svg
    22x22/actions/remmina-switch-page.svg
    22x22/actions/remmina-system-run.svg
    )

set(APPICON24_ACTIONS_DATA
    24x24/actions/remmina-camera-photo.svg
    24x24/actions/remmina-connect.svg
    24x24/actions/remmina-disconnect.svg
    24x24/actions/remmina-document-save.svg
    24x24/actions/remmina-document-send.svg
    24x24/actions/remmina-dynres.svg
    24x24/actions/remmina-fit-window.svg
    24x24/actions/remmina-folder-symbolic.svg
    24x24/actions/remmina-fullscreen.svg
    24x24/actions/remmina-go-bottom.svg
    24x24/actions/remmina-keyboard.svg
    24x24/actions/remmina-pan-down-symbolic.svg
    24x24/actions/remmina-pan-up-symbolic.svg
    24x24/actions/remmina-pin-down.svg
    24x24/actions/remmina-pin-up.svg
    24x24/actions/remmina-preferences-system.svg
    24x24/actions/remmina-scale.svg
    24x24/actions/remmina-switch-page.svg
    24x24/actions/remmina-system-run.svg
    )

set(APPICON32_ACTIONS_DATA
    32x32/actions/remmina-camera-photo.svg
    32x32/actions/remmina-connect.svg
    32x32/actions/remmina-disconnect.svg
    32x32/actions/remmina-document-save.svg
    32x32/actions/remmina-document-send.svg
    32x32/actions/remmina-dynres.svg
    32x32/actions/remmina-fit-window.svg
    32x32/actions/remmina-folder-symbolic.svg
    32x32/actions/remmina-fullscreen.svg
    32x32/actions/remmina-go-bottom.svg
    32x32/actions/remmina-keyboard.svg
    32x32/actions/remmina-pan-down-symbolic.svg
    32x32/actions/remmina-pan-up-symbolic.svg
    32x32/actions/remmina-pin-down.svg
    32x32/actions/remmina-pin-up.svg
    32x32/actions/remmina-preferences-system.svg
    32x32/actions/remmina-scale.svg
    32x32/actions/remmina-switch-page.svg
    32x32/actions/remmina-system-run.svg
    )

set(APPICON48_ACTIONS_DATA
    48x48/actions/remmina-camera-photo.svg
    48x48/actions/remmina-connect.svg
    48x48/actions/remmina-disconnect.svg
    48x48/actions/remmina-document-save.svg
    48x48/actions/remmina-document-send.svg
    48x48/actions/remmina-dynres.svg
    48x48/actions/remmina-fit-window.svg
    48x48/actions/remmina-folder-symbolic.svg
    48x48/actions/remmina-fullscreen.svg
    48x48/actions/remmina-go-bottom.svg
    48x48/actions/remmina-keyboard.svg
    48x48/actions/remmina-pan-down-symbolic.svg
    48x48/actions/remmina-pan-up-symbolic.svg
    48x48/actions/remmina-pin-down.svg
    48x48/actions/remmina-pin-up.svg
    48x48/actions/remmina-preferences-system.svg
    48x48/actions/remmina-scale.svg
    48x48/actions/remmina-switch-page.svg
    48x48/actions/remmina-system-run.svg
    )

set(APPICON16_EMBLEMS_DATA
    16x16/emblems/remmina-sftp.svg
    16x16/emblems/remmina-ssh.svg
    )

set(APPICON22_EMBLEMS_DATA
    22x22/emblems/remmina-sftp.svg
    22x22/emblems/remmina-ssh.svg
    )
set(APPICON24_EMBLEMS_DATA
    24x24/emblems/remmina-sftp.svg
    24x24/emblems/remmina-ssh.svg
    )
set(APPICON32_EMBLEMS_DATA
    32x32/emblems/remmina-sftp.svg
    32x32/emblems/remmina-ssh.svg
    )
set(APPICON48_EMBLEMS_DATA
    48x48/emblems/remmina-sftp.svg
    48x48/emblems/remmina-ssh.svg
    )

install(FILES ${APPICON16_ACTIONS_DATA} DESTINATION ${APPICON16_ACTIONS_DIR})
install(FILES ${APPICON22_ACTIONS_DATA} DESTINATION ${APPICON22_ACTIONS_DIR})
install(FILES ${APPICON24_ACTIONS_DATA} DESTINATION ${APPICON24_ACTIONS_DIR})
install(FILES ${APPICON32_ACTIONS_DATA} DESTINATION ${APPICON32_ACTIONS_DIR})
install(FILES ${APPICON48_ACTIONS_DATA} DESTINATION ${APPICON48_ACTIONS_DIR})
install(FILES ${APPICON16_EMBLEMS_DATA} DESTINATION ${APPICON16_EMBLEMS_DIR})
install(FILES ${APPICON22_EMBLEMS_DATA} DESTINATION ${APPICON22_EMBLEMS_DIR})
install(FILES ${APPICON24_EMBLEMS_DATA} DESTINATION ${APPICON24_EMBLEMS_DIR})
install(FILES ${APPICON32_EMBLEMS_DATA} DESTINATION ${APPICON32_EMBLEMS_DIR})
install(FILES ${APPICON48_EMBLEMS_DATA} DESTINATION ${APPICON48_EMBLEMS_DIR})

